more vs gitignores, pthreads etc. only on linux, port now 50000

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,17 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_definitions(-DUNICODE)
+add_definitions(-D_UNICODE)
+
 add_executable(roast Server.cpp)
 
-set(THREADS_PREFER_PTHREAD_FLAG ON)
-find_package(Threads REQUIRED)
-target_link_libraries(roast PRIVATE Threads::Threads)
+if(UNIX)
+	set(THREADS_PREFER_PTHREAD_FLAG ON)
+	find_package(Threads REQUIRED)
+	target_link_libraries(roast PRIVATE Threads::Threads)
 
-find_package(OpenSSL REQUIRED)
-include_directories(${OPENSSL_INCLUDE_DIR})
-target_link_libraries(roast PRIVATE ${OPENSSL_CRYPTO_LIBRARY})
+	find_package(OpenSSL REQUIRED)
+	include_directories(${OPENSSL_INCLUDE_DIR})
+	target_link_libraries(roast PRIVATE ${OPENSSL_CRYPTO_LIBRARY})
+endif(UNIX)
